test/grammar/schema/index_signature/fail_3/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:5:5
  |
5 |     name: "test"
  |     ^ expected int, got str(test)
  |
variable is defined here, its type is int, but got str(test)